[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "change-ls"
requires-python = ">=3.8"
authors = [
    { name = "Delphy", email = "delphi1024@gmail.com" }
]
dynamic = ["version"]


### setuptools ###

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["change_ls*"]

[tool.setuptools.package-data]
"change_ls.token_server" = ["*.js", "*.wasm"]

[tool.setuptools.dynamic]
version = { attr = "change_ls.client.CHANGE_LS_VERSION" }


### pytest ###

[tool.pytest.ini_options]
testpaths = [
    "."
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "uses_external_resources: marks tests which interact with resources outside the change-ls repo, e.g. external grammar files",
    "test_sequence: used to pass a test sequence file to a fixture"
]


### pylint ###

[tool.pylint.master]
load-plugins = "pylint.extensions.mccabe"
ignore-paths = [
    ".*/change_ls/types/.*.py",
    ".*/change_ls/_languages.py",
    ".*/test/.*/test_.*.py"
]

[tool.pylint.messages_control]
disable = ["protected-access", "no-else-return"]


### Black ###

[tool.black]
exclude = "**/change_ls/types/*,**/change_ls/_languages.py"
