[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "change-ls"
requires-python = ">=3.8"
authors = [
    { name = "Delphy", email = "delphi1024@gmail.com" }
]
dynamic = ["version"]


### setuptools ###

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["change_ls*"]

[tool.setuptools.package-data]
"change_ls.token_server" = ["*.js", "*.wasm"]

[tool.setuptools.dynamic]
version = { attr = "change_ls.CHANGE_LS_VERSION" }


### pytest ###

[tool.pytest.ini_options]
testpaths = [
    "."
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "uses_external_resources: marks tests which interact with resources outside the change-ls repo, e.g. external grammar files",
    "test_sequence: used to pass a test sequence file to a fixture"
]


### pyright ###

[tool.pyright]
include = [
    "change_ls",
    "gen",
    "test"
]
typeCheckingMode = "strict"
reportPrivateUsage = false


### pylint ###

[tool.pylint.main]
load-plugins = "pylint.extensions.mccabe"
ignore-paths = [
    '.*change_ls/types/.*',
    '.*change_ls/_languages.py',
    '.*test/.*/test_.*',
]

[tool.pylint.messages_control]
disable = [
    # 'private' methods are used a lot for interactions between classes that should
    # not be exposed as public API.
    "protected-access",

    # Debatable
    "no-else-return",
    "no-else-raise",

    # Would keep it, but since this has category warning it would fail the CI.
    "fixme",

    # A lot of built-ins are common names for local variables such as 'any',
    # 'next' or 'property'. We risk redefining these for ease of naming and
    # rely on the typechecker to catch accidental wrong usages.
    "redefined-builtin"
]

[tool.pylint.format]
max-line-length = 120


### isort ###

[tool.isort]
profile = "black"
line_length = 100


### Black ###

[tool.black]
exclude = ".*change_ls/types/.*|.*change_ls/_languages.py"
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
